Added powered by weatherAPI statement

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,7 @@
 		</div>
 	</div>
 	
+	<div>Powered by <a href="https://www.weatherapi.com/" title="Free Weather API">WeatherAPI.com</a></div>
 	
 </body>
 </html>
